k8s/microservice/build/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-server
          image: registry:5000/gateway-server
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: gateway
