k8s/microservice/build/time.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
        - name: time-server
          image: registry:5000/time-server
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app: time
